# bluewave-doc-analysis-plugin

./: README.md  pyproject.toml  requerements3_6.txt  requirements.txt
bluewave/: compare_pdfs.py  compare_pdfs_go.py  pdf_to_img.py  pdf_to_img_go.py  result_json_to_training_csv.py  show_similarity_rectangles.py
bluewave/src/: aws_client.py  compare_pdfs_text.py  digit_tests.py  find_common_substrings.py  get_file_data.py  importance_score.py  pdf_duplicate_pages.py  run_and_store_cross_pairs.py  run_and_store_cross_pairs_go.py  train_result_classifiers.py  train_result_classifiers_go.py  utils.py
bluewave/tests/: common_substrings_test.py  get_file_data_test.py  importance_score_test.py  utils_test.py
